--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.4'
+    compile 'com.github.groovy-wslite:groovy-wslite:1.1.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
