--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
+plugins {
+    id "com.jfrog.bintray" version "1.3.1"
+}
+
 group 'com.wescale'
-version '1.0-SNAPSHOT'
+version '0.0.1'
 
 apply plugin: 'groovy'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 repositories {
     mavenCentral()
@@ -11,4 +17,25 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.4'
     compile 'com.github.groovy-wslite:groovy-wslite:1.1.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+publishing {
+    publications {
+        bintray(MavenPublication) {
+            from components.java
+            groupId project.group
+            artifactId 'kubernetes-client'
+            version project.version
+        }
+    }
+}
+
+bintray {
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    pkg {
+        repo = 'maven'
+        name = 'kubernetes-client'
+    }
+    publications = ['bintray']
 }
